test/parsetest/invalid/invalid_use_of_this2.java
class A {
  public static void main(String[] this) {

  }
}